--- a/sayhello.html
+++ b/sayhello.html
@@ -34,7 +34,7 @@
         </div>
       </div>
     </nav>
-<div class="contact-wrapper"  class="animal">
+<div class="contact-wrapper"  class="animal" class="contact-section">
         <h1 class="contact-title">Say Hello ♡</h1>
         <p class="contact-subtitle">We’d love to hear from you!</p>
         
@@ -51,6 +51,13 @@
             <button type="submit" class="form-button">Send With Love ♥</button>
         </form>
     </div>
+    <section class="contact-details">
+      <h2>Contact Info 🐾</h2>
+      <ul>
+        <li><strong>Email:</strong> <a href="mailto:violet.campbell@students.jmcss.org"></a>violet.campbell@students.jmcss.org</li>
+        <li><strong>Phone:</strong> +731 571 6531</li>
+        
+    </section>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
