--- a/mystory.html
+++ b/mystory.html
@@ -87,7 +87,7 @@
 </section>
 
     <footer>
-      <p>Animal Kingdom🎀 | </p>
+      <p>Animal Kingdom🎀 |<a href="https://violetc777.github.io/Coding-1-Final/">live github link</p>
     </footer>
   </div>
   </body>
